Fixed additive test

--- a/test/fullscale_tests/test_additive/additive_2d_heat.yaml
+++ b/test/fullscale_tests/test_additive/additive_2d_heat.yaml
@@ -17,6 +17,7 @@ PeriLab:
         Type: "Bond based"
         Thermal Expansion Coefficient: 0.22
         Specific Heat Capacity: 1
+        Required Specific Volume: 1.1
         Heat Transfer Coefficient: 2000.0
         Environmental Temperature: 30
         Thermal Conductivity: 0.12
