--- a/examples/FEM_Bar/FEM_p1_2d_coupled.yaml
+++ b/examples/FEM_Bar/FEM_p1_2d_coupled.yaml
@@ -7,10 +7,10 @@ PeriLab:
     Node Sets:
       Node Set 1: 1 32 63
       Node Set 2: 31 62 93
-    Input Mesh File: "mesh_data.txt"
+    Input Mesh File: "mesh_data_coupled.txt"
     Type: Text File
     Input External Topology:
-      File: "topo_data.txt"
+      File: "topo_data_coupled.txt"
       Add Neighbor Search: false
   FEM:
     Element Type: "Lagrange"
@@ -29,6 +29,11 @@ PeriLab:
       Density: 2700
       Horizon: 1.1005
       FEM: True
+    block_2:
+      Material Model: "Mat_1"
+      Density: 2700
+      Horizon: 1.1005
+      FEM: False
   Boundary Conditions:
     BC_1:
       Variable: "Displacements"
@@ -49,7 +54,7 @@ PeriLab:
       Fixed dt: 5e-9
   Outputs:
     Output1:
-      Output Filename: "FEM_p1_2d"
+      Output Filename: "FEM_p1_2d_coupled"
       Output File Type: Exodus
       Output Frequency: 100
       Output Variables:
