Added state variable to output #148

--- a/test/fullscale_tests/test_DCB/DCBmodel_UMAT.yaml
+++ b/test/fullscale_tests/test_DCB/DCBmodel_UMAT.yaml
@@ -78,6 +78,7 @@ PeriLab:
         External_Displacements: True
         Strain: True
         Cauchy Stress: True
+        State Variables: True
   Physics:
     Damage Models:
       Damage:
