--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "1.1.7"
 AbaqusReader = "bc6b9049-e460-56d6-94b4-a597b2c0390d"
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -42,6 +43,7 @@ AbaqusReader = "^0.2.6"
 Aqua = "^0.8"
 ArgParse = "^1"
 CSV = "^0.10"
+CUDA = "^5"
 Combinatorics = "1"
 DataFrames = "^1"
 Dates = "^1"
