CompatHelper: bump compat for TensorOperations to 5, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -67,7 +67,7 @@ Reexport = "^1"
 Rotations = "^1"
 StaticArrays = "^1"
 Statistics = "^1"
-TensorOperations = "^4"
+TensorOperations = "^4, 5"
 Tensors = "^1"
 Test = "^1"
 TestSetExtensions = "^3"
