--- a/test/fullscale_tests/test_DCB/DCBmodel_PD_solid.yaml
+++ b/test/fullscale_tests/test_DCB/DCBmodel_PD_solid.yaml
@@ -76,7 +76,6 @@ PeriLab:
         Number of Neighbors: true
         External_Forces: True
         External_Displacements: True
-        Strain: True
         Cauchy Stress: True
   Models:
     Damage Models:
@@ -101,5 +100,6 @@ PeriLab:
     Material Models: true
     Damage Models: true
     Numerical Damping: 5.0e-06
+    Calculate Cauchy: true
     Verlet:
       Safety Factor: 0.9
