--- a/Project.toml
+++ b/Project.toml
@@ -45,6 +45,7 @@ ArgParse = "^1"
 CSV = "^0.10"
 Combinatorics = "^1"
 DataFrames = "^1"
+DataStructures = "^0.18"
 Dates = "^1"
 Dierckx = "^0.5"
 Exodus = "^0.13"
