CompatHelper: add new compat entry for LoopVectorization at version 0.12, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -57,6 +57,7 @@ LibGit2 = "^1"
 LinearAlgebra = "^1"
 Logging = "^1"
 LoggingExtras = "^1"
+LoopVectorization = "0.12"
 MPI = "^0.20"
 MPIPreferences = "^0.1"
 OrderedCollections = "^1"
