--- a/Project.toml
+++ b/Project.toml
@@ -71,6 +71,7 @@ Rotations = "^1"
 StaticArrays = "^1"
 Statistics = "^1"
 TensorOperations = "^4, 5"
+Tensorial = "0.16"
 Tensors = "^1"
 Test = "^1"
 TestSetExtensions = "^3"
