--- a/examples/3d_printing_paper/Cooling/cooling_finer.yaml
+++ b/examples/3d_printing_paper/Cooling/cooling_finer.yaml
@@ -5,9 +5,9 @@
 PeriLab:
   Discretization:
     Node Sets:
-      Node Set 1: 1:1681
+      Node Set 1: 1:6561
     Type: "Text File"
-    Input Mesh File: "mesh.txt"
+    Input Mesh File: "mesh_finer.txt"
   Models:
     Pre Calculation Global:
       Deformed Bond Geometry: false
@@ -24,7 +24,7 @@ PeriLab:
     block_1:
       Thermal Model: "Thermal test"
       Density: 1000.
-      Horizon: 0.000635
+      Horizon: 0.00032
       Specific Heat Capacity: 1800.
   Boundary Conditions:
     BC_1:
@@ -43,7 +43,7 @@ PeriLab:
       Fixed dt: 0.1
   Outputs:
     Output1:
-      Output Filename: "cooling"
+      Output Filename: "cooling_finer"
       Output File Type: Exodus
       Number of Output Steps: 150
       Output Variables:
