added Coupling test

--- a/test/fullscale_tests/test_FEM_coupling/FEM_2d_coupled.yaml
+++ b/test/fullscale_tests/test_FEM_coupling/FEM_2d_coupled.yaml
@@ -16,6 +16,8 @@ PeriLab:
     Element Type: "Lagrange"
     Degree: 1 1
     Material Model: "Mat_1"
+    Coupling:
+      Coupling Type: "Arlequin"
   Models:
     Material Models:
       Mat_1:
