--- a/Project.toml
+++ b/Project.toml
@@ -72,7 +72,7 @@ Rotations = "^1"
 StaticArrays = "^1"
 Statistics = "^1"
 TensorOperations = "^4, 5"
-Tensorial = "0.16, 0.17"
+Tensorial = "0.16, 0.17, 0.18"
 Tensors = "^1"
 Test = "^1"
 TestSetExtensions = "^3"
