--- a/test/fullscale_tests/test_DCB/DCBmodel_unified_bb.yaml
+++ b/test/fullscale_tests/test_DCB/DCBmodel_unified_bb.yaml
@@ -102,5 +102,6 @@ PeriLab:
     Material Models: true
     Damage Models: true
     Numerical Damping: 5.0e-06
+    Calculate Cauchy: true
     Verlet:
       Safety Factor: 0.9
