--- a/test/fullscale_tests/test_DCB/DCBmodel_PD_solid_temp_depended.yaml
+++ b/test/fullscale_tests/test_DCB/DCBmodel_PD_solid_temp_depended.yaml
@@ -94,12 +94,12 @@ PeriLab:
         External_Forces: True
         External_Displacements: True
         Temperature: True
+        Cauchy Stress: True
   Models:
     Damage Models:
       Damage:
         Damage Model: Critical Energy
-        Critical Value: crictical_energy_temperature_depended.txt #0.0035714285714285716
-        # Temperature dependend: "crictical_energy_temperature_depended.txt"
+        Critical Value: crictical_energy_temperature_depended.txt
     Thermal Models:
       Temp:
         Thermal Model: "Thermal Flow"
@@ -125,5 +125,6 @@ PeriLab:
     Damage Models: true
     Thermal Models: true
     Numerical Damping: 5.0e-06
+    Calculate Cauchy: true
     Verlet:
       Safety Factor: 0.9
