--- a/Project.toml
+++ b/Project.toml
@@ -49,7 +49,7 @@ Combinatorics = "^1"
 DataFrames = "^1"
 DataStructures = "^0.18"
 Dates = "^1"
-Dierckx = "^0.5"
+Dierckx = "< 0.5.2"
 Exodus = "^0.13"
 FastGaussQuadrature = "^1"
 JSON3 = "^1"
