--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,8 @@ Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PointInPoly = "b33f1834-3304-4c26-96eb-60ff7015163d"
 PointNeighbors = "1c4d5385-0a27-49de-8e2c-43b175c8985c"
 PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
+PrettyPrint = "8162dcfd-2161-5ef2-ae6c-7681170c5f98"
+PrettyPrinting = "54e16d92-306c-5ea0-a30b-337be88ac337"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
@@ -34,6 +36,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StyledStrings = "f489334b-da3d-4c2e-b8f0-e476e12c162b"
 Tensors = "48a634ad-e948-5137-8d70-aa71f2a747f4"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
@@ -64,6 +67,8 @@ Pkg = "^1"
 PointInPoly = "1.2.0"
 PointNeighbors = "^0.4"
 PrecompileTools = "^1"
+PrettyPrint = "^0.2"
+PrettyPrinting = "^0.4"
 PrettyTables = "^2"
 Printf = "^1"
 ProgressBars = "^1"
@@ -71,6 +76,7 @@ Random = "^1"
 Rotations = "^1"
 StaticArrays = "^1"
 Statistics = "^1"
+StyledStrings = "^1"
 Tensors = "^1"
 Test = "^1"
 TestSetExtensions = "^3"
